# Abednego-Thesis

./: CMakeLists.txt  README.md  config.json  mylogfile.csv
models/: classes.txt  model.cfg
src/: frame_generator.cpp  frame_generator.h  tracker.cpp  tracker.hpp  vehicle_tracker.cpp
src/events/: ccl_classified_events.h  event2d.h  event_aeb_tracked_object.h  event_bbox.h  event_camera_motion.h  event_can.h  event_cd.h  event_disp_flow_ccl.h  event_em.h  event_ext_trigger.h  event_imu.h  event_lifetime.h  event_temperature_monitor.h  event_traits.h  events.h  events_3d.h  frequency_event.h  period_event.h
src/tracker/: Tracker.h  TrackingEngine.cpp  TrackingEngine.h
src/tracker/predictor/: Predictor.cpp  Predictor.h
src/tracker/predictor/kalman/: KalmanPredictor.cpp  KalmanPredictor.h
src/util/: BoundingBox.h  FilterState.cpp  FilterState.h  MyTime.h  Tracking.cpp  Tracking.h
